--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-template-compiler": "^2.6.11"
   },
   "dependencies": {
-    "@glidejs/glide": "^3.4.1"
+    "@glidejs/glide": "^3.4.1",
+    "animate.css": "^4.1.0"
   }
 }
